feat: implement MarketSimulator to inject deterministic synthetic candles for strategy testing